tests/fixtures/invalid/pow_bytes_list_none.py
# Cannot call pow() with Bytes, List[int], None
x = pow(b"hello", [1, 2, 3], None)
